test/files/neg/t11136.check
t11136.scala:12: error: overriding method c in trait SO of type (x: Int)Int;
  method c in trait SOIO of type (x: Int)Int cannot override final member
class L extends AS with SOSO // error expected: c definined in SOIO overrides final method c in SO
      ^
one error found
